WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
54277
Web Inspector: [REGRESSION introduced in
r77950
] Develop -> Start Debugging JavaScript does not open Web Inspector.
https://bugs.webkit.org/show_bug.cgi?id=54277
Summary
Web Inspector: [REGRESSION introduced in r77950] Develop -> Start Debugging J...
Eckhard Nees
Reported
2011-02-11 00:58:21 PST
After downloading of the nighty bulit version, it is not possible to open the developer tools for debugging
Attachments
[IMAGE] Screenshot.
(193.01 KB, image/png)
2011-02-11 11:12 PST
,
Pavel Feldman
no flags
Details
Patch
(4.78 KB, patch)
2011-02-11 13:25 PST
,
Pavel Feldman
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Pavel Feldman
Comment 1
2011-02-11 10:48:40 PST
Things work fine for me on ToT. Could you please provide a build number and scenario?
Eckhard Nees
Comment 2
2011-02-11 11:03:09 PST
WebKit
r78038
The developer Tools never starts. It doesn't matter which html-file you choose;
Pavel Feldman
Comment 3
2011-02-11 11:12:25 PST
Created
attachment 82146
[details]
[IMAGE] Screenshot. Things work fine for me. We might have touched preferences. Could you try opening it using shortcut (Cmd+Option+I)? Maybe it is docked and too thin in the bottom of the screen?
Eckhard Nees
Comment 4
2011-02-11 12:29:17 PST
This functions, only the drop-down menu start debugging javascript doesn't function
Pavel Feldman
Comment 5
2011-02-11 12:50:44 PST
Got it.
Pavel Feldman
Comment 6
2011-02-11 13:25:45 PST
Created
attachment 82166
[details]
Patch
Ilya Tikhonovsky
Comment 7
2011-02-12 00:19:40 PST
Comment on
attachment 82166
[details]
Patch lgtm
WebKit Commit Bot
Comment 8
2011-02-14 05:20:45 PST
Comment on
attachment 82166
[details]
Patch Clearing flags on attachment: 82166 Committed
r78470
: <
http://trac.webkit.org/changeset/78470
>
WebKit Commit Bot
Comment 9
2011-02-14 05:20:50 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug