2011-02-14  Pavel Feldman  <pfeldman@chromium.org>

Reviewed by Yury Semikhatsky.

        Web Inspector: [REGRESSION introduced in r77950] Develop -> Start Debugging JavaScript does not open Web Inspector.
        https://bugs.webkit.org/show_bug.cgi?id=54277

        * inspector/InspectorAgent.cpp:
        (WebCore::InspectorAgent::populateScriptObjects):
        (WebCore::InspectorAgent::stopUserInitiatedProfiling):
        (WebCore::InspectorAgent::showAndEnableDebugger):
        (WebCore::InspectorAgent::showPanel):
        * inspector/InspectorAgent.h:
        * inspector/InspectorController.cpp:
        (WebCore::InspectorController::showAndEnableDebugger):
        (WebCore::InspectorController::stopUserInitiatedProfiling):

Canonical link: https://commits.webkit.org/68471@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@78470 268f45cc-cd09-0410-ab3c-d52691b4dbfc